added swagger to mongo
