# docs/swagger.json
@@ -9,6 +9,34 @@
     "host": "localhost:3000",
     "basePath": "/",
     "paths": {
+        "/createmongo": {
+            "post": {
+                "description": "You can add data to mongo database via this endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mongo"
+                ],
+                "summary": "Create mongo data",
+                "operationId": "create-mongo",
+                "parameters": [
+                    {
+                        "description": "Json for creating data",
+                        "name": "JsonExample",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.MongoDTO"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/createredis": {
             "post": {
                 "description": "You can add data to redis database via this endpoint",
@@ -31,6 +59,34 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/domains.redisDTO"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/deletemongo": {
+            "delete": {
+                "description": "You can delete data from mongo database via this endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mongo"
+                ],
+                "summary": "Delete mongo data",
+                "operationId": "delete-mongo",
+                "parameters": [
+                    {
+                        "description": "Json for deleting data",
+                        "name": "JsonExample",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.MongoDTO"
                         }
                     }
                 ],
@@ -65,6 +121,20 @@
                 "responses": {}
             }
         },
+        "/readmongo": {
+            "get": {
+                "description": "You can read data from mongo database via this endpoint",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mongo"
+                ],
+                "summary": "Read mongo data",
+                "operationId": "read-mongo",
+                "responses": {}
+            }
+        },
         "/readredis": {
             "get": {
                 "description": "You can read data from redis database via this endpoint",
@@ -86,6 +156,34 @@
                         "name": "key",
                         "in": "query",
                         "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/updatemongo": {
+            "put": {
+                "description": "You can update mongo data via this endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mongo"
+                ],
+                "summary": "Update mongo data",
+                "operationId": "update-mongo",
+                "parameters": [
+                    {
+                        "description": "Json for updating data",
+                        "name": "JsonExample",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.MongoDTO"
+                        }
                     }
                 ],
                 "responses": {}
@@ -122,6 +220,17 @@
     },
     "definitions": {
         "domains.redisDTO": {
+            "type": "object",
+            "properties": {
+                "Key": {
+                    "type": "string"
+                },
+                "Value": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.MongoDTO": {
             "type": "object",
             "properties": {
                 "Key": {
